# mtsv_tools

./: .gitignore  .travis.yml  CITATION.cff  Cargo.toml  LICENSE  README.md  build.sh  dev-requirements.yaml  meta.yaml
arbitrary_dna/: Cargo.toml
conda-recipe/: conda-upload.sh  conda_build.sh  meta.yaml  run_test.sh
src/: align.rs  binner.rs  builder.rs  chunk.rs  collapse.rs  error.rs  index.rs  io.rs  lib.rs  prep.rs  prep_config.rs  util.rs
ssw/: Cargo.toml
