[package]
name = "mtsv"
version = "2.0.0"
authors = ["Adam Perry <adam.n.perry@gmail.com>",
            "Tara Furstenau <tara.furstenau@gmail.com>"]
description = "Metagenomic binning and analysis"

[package.metadata.bundle]
name = "MTSv"
identifier = "mac.os.mstv"
icon = ["icons/favicon-32x32.png", "icons/favicon-96x96.png"]
version = "0.4.0"
description = "Metagenomic binning and analysis" 

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
bio = "0.39.1"
chrono = "0.2"
cue = {path="vendor/cue", version = "0.1"}
env_logger = "0.3"
flate2 = "0.2"
itertools = "0.4"
log = "0.3"
rustc-serialize = "0.3.24"
serde = { version = "1.0", features = ["derive"]}
ssw = { path = "ssw" }
stopwatch = "0.0.6"
tar = "0.4"

[dependencies.clap]
version = "2.9"
default_features = false
features = ["suggestions"]

[dev-dependencies]
mktemp = "0.2"
quickcheck = "0.3"
rand = "0.3"
