[package]
name = "mtsv"
version = "2.0.0"
authors = ["Adam Perry <adam.n.perry@gmail.com>",
            "Tara Furstenau <tara.furstenau@gmail.com>"]
description = "Metagenomic binning and analysis"
edition = "2021"

[package.metadata.bundle]
name = "MTSv"
identifier = "mac.os.mstv"
icon = ["icons/favicon-32x32.png", "icons/favicon-96x96.png"]
version = "0.4.0"
description = "Metagenomic binning and analysis" 

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
bio = "0.39.2"
cue = {path="vendor/cue", version = "0.1"}
env_logger = "0.3"
flate2 = "0.2"
itertools = "0.4"
log = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
ssw = { path = "ssw" }
tar = "0.4"
chrono = { version = "0.4", features = ["clock"] }

[patch.crates-io]
nalgebra = "0.33"


[dependencies.clap]
version = "2.9"
default-features = false
features = ["suggestions"]

[dev-dependencies]
tempfile = "3"
quickcheck = "0.3"
rand = "0.3"
