[package]
name = "mtsv"
version = "2.0.0"
authors = ["Adam Perry <adam.n.perry@gmail.com>",
            "Tara Furstenau <tara.furstenau@gmail.com>"]
description = "Metagenomic binning and analysis"
edition = "2021"

[package.metadata.bundle]
name = "MTSv"
identifier = "mtsv"
icon = ["icons/icon.svg", "icons/icon.svg"]

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
bio = "3.0.0"
cue = {path="vendor/cue", version = "0.1"}
env_logger = "0.3"
flate2 = "0.2"
itertools = "0.4"
log = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
ssw = { path = "ssw" }
tar = "0.4"
chrono = { version = "0.4", features = ["clock"] }


[dependencies.clap]
version = "2.9"
default-features = false
features = ["suggestions"]

[dev-dependencies]
tempfile = "3"
quickcheck = "0.3"
rand = "0.3"
